--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 # CFLAGS = -Wall -std=gnu11 -O2
 # LDFLAGS =
 
-SUBDIRS = cares
+SUBDIRS = cares uv
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -21,7 +21,7 @@ CLEANFILES =
 
 lib_LTLIBRARIES = libhsk.la
 
-libhsk_la_LIBADD = -lcares
+libhsk_la_LIBADD = -lcares -luv
 libhsk_la_CFLAGS = @CFLAGS@
 libhsk_la_LDFLAGS = -no-undefined -version-info 0:0:0
 libhsk_la_SOURCES = src/b64.c \
@@ -49,6 +49,7 @@ PROGS = hsk
 noinst_PROGRAMS = $(PROGS)
 hsk_SOURCES = test/hsk.c
 hsk_LDADD = $(top_builddir)/libhsk.la
+hsk_LDFLAGS = -static
 hsk_CFLAGS = $(AM_CFLAGS)
 hsk_CPPFLAGS = $(AM_CPPFLAGS)
 
