--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 # CFLAGS = -Wall -std=gnu11 -O2
 # LDFLAGS =
 
-SUBDIRS = uv ldns unbound
+SUBDIRS = uv ldns secp256k1 unbound
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -11,6 +11,7 @@ AM_CPPFLAGS = -I$(top_builddir)                  \
               -I$(top_srcdir)/src                \
               -I$(top_srcdir)/uv/include         \
               -I$(top_srcdir)/ldns/include       \
+              -I$(top_srcdir)/secp256k1/include  \
               -I$(top_srcdir)/unbound/libunbound
 
 include_HEADERS = include/hsk.h           \
@@ -32,10 +33,11 @@ CLEANFILES =
 lib_LTLIBRARIES = libhsk.la
 
 # libhsk_la_LIBADD = -luv -lldns -lssl -lcrypto -lunbound
-libhsk_la_LIBADD = -lssl                                       \
-                   -lcrypto                                    \
-                   $(top_builddir)/uv/.libs/libuv.la           \
-                   $(top_builddir)/ldns/.libs/libldns.la
+libhsk_la_LIBADD = -lssl                                           \
+                   -lcrypto                                        \
+                   $(top_builddir)/uv/.libs/libuv.la               \
+                   $(top_builddir)/ldns/.libs/libldns.la           \
+                   $(top_builddir)/secp256k1/.libs/libsecp256k1.la
 
 libhsk_la_CFLAGS = @CFLAGS@
 libhsk_la_LDFLAGS = -no-undefined -version-info 0:0:0
@@ -47,6 +49,7 @@ libhsk_la_SOURCES = src/addr.c     \
                     src/cuckoo.c   \
                     src/dns.c      \
                     src/dnssec.c   \
+                    src/ec.c       \
                     src/hash.c     \
                     src/header.c   \
                     src/map.c      \
