bio: more functions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -73,6 +73,7 @@ libhsk_la_SOURCES = src/addr.c     \
                     src/req.c      \
                     src/resource.c \
                     src/sha256.c   \
+                    src/sig0.c     \
                     src/siphash.c  \
                     src/timedata.c \
                     src/utils.c
