--- a/configure.ac
+++ b/configure.ac
@@ -45,7 +45,7 @@ AC_TYPE_INT64_T
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_SYS_LARGEFILE
-AC_CHECK_FUNCS([memset strcasecmp strdup strstr getrandom])
+AC_CHECK_FUNCS([memset strcasecmp strdup strstr getrandom arc4random random])
 
 AC_CHECK_HEADERS([ \
   arpa/inet.h \
