--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,10 @@ config.h.in
 libhsk.pc
 hsk-*.tar.gz
 hsk-*.tar.gz.asc
+hnsd
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+src/stamp-h1
