Shutdown cleanly on SIGINT and SIGTERM

--- a/Makefile.am
+++ b/Makefile.am
@@ -67,7 +67,8 @@ hnsd_SOURCES = src/cache.c  \
                src/daemon.c \
                src/ns.c     \
                src/rs.c     \
-               src/rs_worker.c
+               src/rs_worker.c \
+               src/signals.c
 
 hnsd_LDADD = $(LIB_UNBOUND)             \
              $(top_builddir)/libhsk.la
