etc: update systemd service

--- a/etc/hnsd.conf
+++ b/etc/hnsd.conf
@@ -1,3 +1,33 @@
-POOL_SIZE=--pool-size=1
-RS_HOST=--rs-host=127.0.0.1:53
-UNBOUND=--rs-config=/etc/unbound/unbound.conf
+# Sample hnsd config file (/etc/hnsd.conf)
+
+#Path to config file.
+#config: </path/to/config>
+
+#IP address and port for root nameserver, e.g. 127.0.0.1:5369.
+#ns-host: <ip[:port]>
+
+#IP address and port for recursive nameserver, e.g. 127.0.0.1:53.
+#rs-host: <ip[:port]>
+
+#Public IP for NS records in the root zone.
+#ns-ip: <ip>
+
+#Path to unbound config file.
+#rs-config: <config>
+
+#Size of peer pool.
+#pool-size: <size>
+
+#Identity key for signing DNS responses as well as P2P messages.
+#identity-key: <hex-string>
+
+#-s, --seeds <seed1,seed2,...>
+#Extra seeds to connect to on the P2P network.
+#Example:
+	#-s aorsxa4ylaacshipyjkfbvzfkh3jhh4yowtoqdt64nzemqtiw2whk@127.0.0.1
+
+#Redirect output to a log file.
+#log-file: <filename>
+
+#Fork and background the process.
+#daemon: true|false
