--- a/etc/hnsd.service
+++ b/etc/hnsd.service
@@ -1,14 +1,36 @@
 [Unit]
-Description=handshake DNS resolver
-Wants=network-online.target
-After=network-online.target
+Description=Handshake Name Resolution
+Documentation=https://handshake-org.github.io/
+DefaultDependencies=no
+After=systemd-sysusers.service systemd-networkd.service
+Before=network.target nss-lookup.target shutdown.target
+Conflicts=shutdown.target
+Wants=nss-lookup.target
 
 [Service]
-EnvironmentFile=/etc/hnsd.conf
-ExecStart=/usr/bin/hnsd $POOL_SIZE $RS_HOST $UNBOUND $PEER
-AmbientCapabilities=CAP_NET_BIND_SERVICE
+AmbientCapabilities=CAP_SETPCAP CAP_NET_RAW CAP_NET_BIND_SERVICE
+CapabilityBoundingSet=CAP_SETPCAP CAP_NET_RAW CAP_NET_BIND_SERVICE
+ExecStart=!!@rootlibexecdir@/hnsd -c /etc/hnsd.conf
+LockPersonality=yes
+MemoryDenyWriteExecute=yes
+NoNewPrivileges=yes
+PrivateDevices=yes
+PrivateTmp=yes
+ProtectControlGroups=yes
+ProtectHome=yes
+ProtectKernelModules=yes
+ProtectKernelTunables=yes
+ProtectSystem=strict
 Restart=always
-RestartSec=3
+RestartSec=0
+RestrictAddressFamilies=AF_UNIX AF_NETLINK AF_INET AF_INET6
+RestrictNamespaces=yes
+RestrictRealtime=yes
+RestrictSUIDSGID=yes
+SystemCallArchitectures=native
+SystemCallErrorNumber=EPERM
+WatchdogSec=3min
 
 [Install]
-WantedBy=default.target
+WantedBy=multi-user.target
+Alias=dbus-org.freedesktop.resolve1.service
