--- a/etc/hnsd.service
+++ b/etc/hnsd.service
@@ -10,7 +10,7 @@ Wants=nss-lookup.target
 [Service]
 AmbientCapabilities=CAP_SETPCAP CAP_NET_RAW CAP_NET_BIND_SERVICE
 CapabilityBoundingSet=CAP_SETPCAP CAP_NET_RAW CAP_NET_BIND_SERVICE
-ExecStart=!!@rootlibexecdir@/hnsd -c /etc/hnsd.conf
+ExecStart=/usr/bin/hnsd --config=/etc/hnsd.conf
 LockPersonality=yes
 MemoryDenyWriteExecute=yes
 NoNewPrivileges=yes
