etc: pass cmd line params to systemd

--- a/etc/hnsd.conf
+++ b/etc/hnsd.conf
@@ -1,33 +1,33 @@
-# Sample hnsd config file (/etc/hnsd.conf)
+# Sample hnsd config file (/etc/hnsd.conf) to be used with systemd
 
-#Path to config file.
-#config: </path/to/config>
+# set HNSD_CONFIG to the corresponding command line params
+#HNSD_CONFIG=
 
+#-n, --ns-host <ip[:port]>
 #IP address and port for root nameserver, e.g. 127.0.0.1:5369.
-#ns-host: <ip[:port]>
 
+#-r, --rs-host <ip[:port]>
 #IP address and port for recursive nameserver, e.g. 127.0.0.1:53.
-#rs-host: <ip[:port]>
 
+#-i, --ns-ip <ip>
 #Public IP for NS records in the root zone.
-#ns-ip: <ip>
 
+#-u, --rs-config <config>
 #Path to unbound config file.
-#rs-config: <config>
 
+#-p, --pool-size <size>
 #Size of peer pool.
-#pool-size: <size>
 
+#-k, --identity-key <hex-string>
 #Identity key for signing DNS responses as well as P2P messages.
-#identity-key: <hex-string>
 
 #-s, --seeds <seed1,seed2,...>
 #Extra seeds to connect to on the P2P network.
 #Example:
 	#-s aorsxa4ylaacshipyjkfbvzfkh3jhh4yowtoqdt64nzemqtiw2whk@127.0.0.1
 
+#-l, --log-file <filename>
 #Redirect output to a log file.
-#log-file: <filename>
 
+#-d, --daemon
 #Fork and background the process.
-#daemon: true|false
