--- a/etc/hnsd.service
+++ b/etc/hnsd.service
@@ -11,7 +11,8 @@ Wants=nss-lookup.target
 [Service]
 AmbientCapabilities=CAP_SETPCAP CAP_NET_RAW CAP_NET_BIND_SERVICE
 CapabilityBoundingSet=CAP_SETPCAP CAP_NET_RAW CAP_NET_BIND_SERVICE
-ExecStart=/usr/bin/hnsd --config=/etc/hnsd.conf
+EnvironmentFile=/etc/hnsd.conf
+ExecStart=/usr/bin/hnsd $HNSD_CONFIG
 LockPersonality=yes
 MemoryDenyWriteExecute=yes
 NoNewPrivileges=yes
