--- a/.github/workflows/hnsd.yml
+++ b/.github/workflows/hnsd.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: autogen
-    - run: ./autogen.sh
+      run: ./autogen.sh
     - name: configure
       run: ./configure
     - name: make
