--- a/.github/workflows/hnsd.yml
+++ b/.github/workflows/hnsd.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: install unbound
+      run: apt install -y unbound
     - name: autogen
       run: ./autogen.sh
     - name: configure
