--- a/.github/workflows/hnsd.yml
+++ b/.github/workflows/hnsd.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install unbound
-      run: apt install -y unbound
+      run: sudo apt install -y unbound
     - name: autogen
       run: ./autogen.sh
     - name: configure
