--- a/.github/workflows/hnsd.yml
+++ b/.github/workflows/hnsd.yml
@@ -4,9 +4,10 @@ on: [push, pull_request]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
     - name: install unbound
@@ -17,3 +18,5 @@ jobs:
       run: ./configure
     - name: make
       run: make
+
+
