--- a/.github/workflows/hnsd.yml
+++ b/.github/workflows/hnsd.yml
@@ -36,7 +36,7 @@ jobs:
           msystem: MSYS
       - shell: msys2 {0}
         run: |
-          pacman -S base-devel mingw-w64-x86_64-toolchain mingw-w64-x86_64-unbound mingw-w64-x86_64-crt-git
+          pacman -S --noconfirm base-devel mingw-w64-x86_64-toolchain mingw-w64-x86_64-unbound mingw-w64-x86_64-crt-git
           ./autogen.sh
           ./configure
           make
