--- a/.github/workflows/hnsd.yml
+++ b/.github/workflows/hnsd.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: msys2/setup-msys2@v2
         with:
           msystem: MSYS
-      - shell: msys2 {0}
+      - shell: msys2 {0} | true
         run: pacman -Syyu --noconfirm base-devel mingw-w64-x86_64-toolchain mingw-w64-x86_64-unbound mingw-w64-x86_64-crt-git | true
       - shell: msys2 {0}
         run: |
